--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sovendus-builder",
-    "version": "1.0.1",
+    "version": "1.0.4",
     "main": "dist/build.js",
     "types": "dist/config.d.ts",
     "bin": {
@@ -10,7 +10,7 @@
     "scripts": {
         "build": "rm -rf ./dist && tsc -p tsconfig-build.json",
         "test": "vitest",
-        "release": "yarn test run && yarn build && npm publish --access public"
+        "release": "vitest run && yarn build && npm publish --access public"
     },
     "dependencies": {
         "@vitejs/plugin-react": "^1.0.0",
@@ -18,6 +18,7 @@
         "commander": "^7.0.0",
         "postcss": "^8.5.1",
         "tailwindcss": "^3.0.0",
+        "ts-node": "^10.9.2",
         "vite": "^2.0.0"
     },
     "devDependencies": {
@@ -37,7 +38,6 @@
         "prettier-eslint": "^16.3.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "ts-node": "^10.9.2",
         "typescript": "^4.0.0",
         "typescript-eslint": "^8.10.0",
         "vite-plugin-node": "^4.0.0",
