--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sovendus-builder",
-    "version": "1.0.7",
+    "version": "1.0.17",
     "main": "dist/build.js",
     "types": "dist/config.d.ts",
     "bin": {
@@ -14,14 +14,15 @@
         "release": "vitest run && yarn build && npm publish --access public"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
         "commander": "^13.1.0",
         "fs-extra": "^11.3.0",
         "postcss": "^8.5.1",
+        "rollup": "^4.34.4",
         "tailwindcss": "^4.0.4",
         "ts-node": "^10.9.2",
-        "@tailwindcss/vite": "^4.0.4",
         "vite": "^6.1.0"
     },
     "devDependencies": {
