--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,10 @@
     "target": "ESNext",
     "module": "NodeNext",
     "moduleResolution": "nodenext",
-    "allowImportingTsExtensions": true,
     "skipLibCheck": true,
     "types": ["node"],
     "noEmitOnError": true,
-    "removeComments": true,
+    "removeComments": false,
     "allowJs": false,
     "checkJs": false,
     "esModuleInterop": true,
