--- a/.npmignore
+++ b/.npmignore
@@ -10,8 +10,9 @@ tsconfig.json
 tsconfig-build.json
 .vscode/
 .eslintrc.json
+.eslintignore
 .prettier.config.js
-.vitest.config.ts
+.gitignore
 
 # Ignore other unnecessary files
 .git/
