--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sovendus-builder",
     "description": "An all-in-one build/bundle tool based on vite and rollup. Build anything from vanilla js to typescript react.",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "main": "dist/build.js",
     "types": "dist/config.d.ts",
     "license": "MIT",
@@ -22,8 +22,7 @@
     "scripts": {
         "build": "rm -rf ./dist && tsc -p tsconfig-build.json",
         "lint": "eslint src --fix",
-        "test": "vitest",
-        "release": "vitest run && yarn build && npm publish --access public"
+        "test": "vitest"
     },
     "repository": {
         "type": "git",
