--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sovendus-builder",
     "description": "An all-in-one build/bundle tool based on vite and rollup. Build anything from vanilla js to typescript react.",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "main": "dist/build.js",
     "types": "dist/config.d.ts",
     "license": "MIT",
@@ -26,7 +26,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/Sovendus-GmbH/sovendus-builder.git"
+        "url": "git+https://github.com/Sovendus-GmbH/sovendus-builder.git"
     },
     "bugs": {
         "url": "https://github.com/Sovendus-GmbH/sovendus-builder/issues"
