--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   build:
+    if: !startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
 
     steps:
@@ -35,7 +36,6 @@ jobs:
 
   publish-npm:
     if: startsWith(github.ref, 'refs/tags/')
-    needs: build
     runs-on: ubuntu-latest
 
     steps:
@@ -52,6 +52,6 @@ jobs:
         run: yarn install
 
       - name: Publish to npm
-        run: npm publish
+        run: yarn test run && yarn build && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
