--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   build:
-    if: !startsWith(github.ref, 'refs/tags/')
+    if: "!startsWith(github.ref, 'refs/tags/')""
     runs-on: ubuntu-latest
 
     steps:
