--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: Run linter
+        run: yarn lint
+
       - name: Run tests
         run: yarn test
 
@@ -52,6 +55,6 @@ jobs:
         run: yarn install
 
       - name: Publish to npm
-        run: yarn test run && yarn build && npm publish
+        run: yarn lint && yarn test run && yarn build && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
