--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build package
         run: yarn build
 
-  publish-package:
+  publish-npm:
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
 
@@ -54,10 +54,28 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Tests, linter and build
-        run: yarn lint && yarn test run && yarn build
-
       - name: Publish to npm
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  snyk:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Run Snyk
+        run: snyk test --org=${{ secrets.SNYK_ORG_KEY }}
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
