--- a/package.json
+++ b/package.json
@@ -48,15 +48,21 @@
             "email": "techsupport@sovendus.com"
         }
     ],
-    "dependencies": {
+    "optionalDependencies": {
         "@tailwindcss/vite": "^4.0.6",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
+        "tailwindcss": "^4.0.6",
+        "postcss": "^8.5.2",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0"
+    },
+    "peerDependencies": {
+        "typescript": "^5.7.3"
+    },
+    "dependencies": {
         "commander": "^13.1.0",
         "fs-extra": "^11.3.0",
-        "postcss": "^8.5.2",
-        "tailwindcss": "^4.0.6",
-        "ts-node": "^10.9.2",
         "vite": "^6.1.0"
     },
     "devDependencies": {
@@ -77,8 +83,8 @@
         "prettier-eslint": "^16.3.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0",
-        "vitest": "^3.0.5"
+        "vitest": "^3.0.5",
+        "typescript": "^5.7.3"
     }
 }
