ci: update npm publish workflow to include yarn install and build steps

--- a/.npmignore
+++ b/.npmignore
@@ -11,9 +11,7 @@ tsconfig-build.json
 .vscode/
 .eslintrc.json
 .eslintignore
-.prettier.config.js
+prettier.config.cjs
+vitest.config.ts
 .gitignore
-
-# Ignore other unnecessary files
 .git/
-.gitignore
