--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sovendus-builder",
     "description": "An all-in-one build/bundle tool based on vite and rollup. Build anything from vanilla js to typescript react.",
-    "version": "1.1.13",
+    "version": "1.1.14",
     "main": "dist/build.js",
     "types": "dist/config.d.ts",
     "license": "MIT",
@@ -51,10 +51,10 @@
         "@tailwindcss/vite": "^4.0.6",
         "@vitejs/plugin-react": "^4.3.4",
         "autoprefixer": "^10.4.20",
-        "tailwindcss": "^4.0.6",
         "postcss": "^8.5.2",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "tailwindcss": "^4.0.6"
     },
     "peerDependencies": {
         "typescript": "^5.7.3"
@@ -82,8 +82,9 @@
         "prettier-eslint": "^16.3.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "rollup": "^4.34.8",
+        "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0",
-        "vitest": "^3.0.5",
-        "typescript": "^5.7.3"
+        "vitest": "^3.0.5"
     }
 }
