--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0",
         "vitest": "^3.0.5"
+    },
+    "resolutions": {
+        "rollup": "^4.34.8"
     }
 }
