--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sovendus-builder",
     "description": "An all-in-one build/bundle tool based on vite and rollup. Build anything from vanilla js to typescript react.",
-    "version": "1.1.20",
+    "version": "1.1.21",
     "main": "dist/build.js",
     "types": "dist/config.d.ts",
     "license": "MIT",
@@ -54,6 +54,7 @@
         "postcss": "^8.5.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "vite-plugin-css-injected-by-js": "^3.5.2",
         "tailwindcss": "^4.0.6"
     },
     "peerDependencies": {
