--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "scripts": {
         "build": "rm -rf ./dist && tsc -p tsconfig-build.json",
         "lint": "eslint src --fix",
-        "test": "vitest"
+        "test": "vitest",
+        "pub": "sovendus-release-tool"
     },
     "repository": {
         "type": "git",
@@ -54,8 +55,8 @@
         "postcss": "^8.5.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "vite-plugin-css-injected-by-js": "^3.5.2",
-        "tailwindcss": "^4.0.6"
+        "tailwindcss": "^4.0.6",
+        "vite-plugin-css-injected-by-js": "^3.5.2"
     },
     "peerDependencies": {
         "typescript": "^5.7.3"
@@ -84,6 +85,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "rollup": "^4.34.8",
+        "sovendus-release-tool": "^1.0.23",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0",
         "vitest": "^3.0.5"
