--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "skipLibCheck": true,
-    "types": ["node"],
+    "types": ["node", "jest"],
     "noEmitOnError": true,
     "removeComments": false,
     "allowJs": false,
