--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "commander": "^13.1.0",
     "fs-extra": "^11.3.0",
     "vite": "^6.1.0"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/autoprefixer": "^10.2.4",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.13.4",
