fix: set NODE_ENV to test for vitest execution in package.json

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "rm -rf ./dist && tsc -p tsconfig-build.json",
     "lint": "eslint src --fix",
-    "test": "vitest run",
+    "test": "NODE_ENV=test vitest run",
     "pub": "sovendus-release-tool"
   },
   "repository": {
