--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.6",
-    "vite-plugin-css-injected-by-js": "^3.5.2"
+    "vite-plugin-css-injected-by-js": "^3.5.2",
+    "vite-plugin-dts": "^4.5.3"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
