refactor: update ESLint and Prettier configurations, improve code formatting, and replace ReactDOM.render with createRoot in tests

--- a/.npmignore
+++ b/.npmignore
@@ -9,9 +9,9 @@ test-files/
 tsconfig.json
 tsconfig-build.json
 .vscode/
-.eslintrc.json
-.eslintignore
+eslint.config.mjs
 prettier.config.cjs
 vitest.config.ts
 .gitignore
 .git/
+sov_release.config.ts
