--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "build": "rm -rf ./dist && tsc -p tsconfig-build.json",
-    "lint": "eslint src --fix",
+    "lint": "eslint --fix",
     "test": "NODE_ENV=test vitest run",
     "pub": "sovendus-release-tool"
   },
@@ -49,13 +49,13 @@
     }
   ],
   "optionalDependencies": {
-    "@tailwindcss/vite": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.9",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.9",
     "vite-plugin-css-injected-by-js": "^3.5.2",
     "vite-plugin-dts": "^4.5.3"
   },
@@ -66,34 +66,34 @@
     "archiver": "^7.0.1",
     "commander": "^13.1.0",
     "fs-extra": "^11.3.0",
-    "vite": "^6.1.0"
+    "vite": "^6.2.0"
   },
   "devDependencies": {
     "@types/archiver": "^6.0.3",
     "@types/autoprefixer": "^10.2.4",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^22.13.4",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "^10.0.1",
+    "@types/node": "^22.13.8",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "9.21.0",
+    "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "7.37.4",
-    "eslint-plugin-react-hooks": "5.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "^3.5.1",
-    "prettier-eslint": "^16.3.0",
+    "prettier": "3.5.3",
+    "prettier-eslint": "16.3.0",
+    "prettier-plugin-sort-json": "^4.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "rollup": "^4.34.8",
-    "sovendus-release-tool": "^1.0.24",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.0",
-    "vitest": "^3.0.5"
+    "rollup": "^4.34.9",
+    "sovendus-release-tool": "^1.0.26",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.25.0",
+    "vitest": "^3.0.7"
   },
   "resolutions": {
-    "rollup": "^4.34.8"
+    "rollup": "^4.34.8",
+    "typescript": "^5.8.2"
   }
 }
