--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "4.0.11",
-    "vite-plugin-css-injected-by-js": "3.5.2",
-    "vite-plugin-dts": "4.5.3"
+    "vite-plugin-css-injected-by-js": "3.5.2"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
@@ -65,6 +64,7 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "commander": "^13.1.0",
+    "vite-plugin-dts": "4.5.3",
     "fs-extra": "^11.3.0",
     "vite": "^6.2.1"
   },
