chore: update @babel/helpers and related dependencies in package.json and yarn.lock

--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
   },
   "resolutions": {
     "rollup": "4.34.9",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "@babel/helpers": "7.26.10"
   }
 }
