--- a/package.json
+++ b/package.json
@@ -49,24 +49,24 @@
     }
   ],
   "optionalDependencies": {
-    "@tailwindcss/vite": "4.0.15",
+    "@tailwindcss/vite": "4.0.17",
     "@vitejs/plugin-react": "4.3.4",
     "autoprefixer": "10.4.21",
     "postcss": "8.5.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "tailwindcss": "4.0.15",
+    "tailwindcss": "4.0.17",
     "vite-plugin-css-injected-by-js": "3.5.2"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "archiver": "^7.0.1",
-    "commander": "^13.1.0",
+    "archiver": "7.0.1",
+    "commander": "13.1.0",
     "vite-plugin-dts": "4.5.3",
-    "fs-extra": "^11.3.0",
-    "vite": "^6.2.3"
+    "fs-extra": "11.3.0",
+    "vite": "6.2.3"
   },
   "devDependencies": {
     "@types/archiver": "6.0.3",
@@ -76,14 +76,14 @@
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
     "@types/eslint": "9.6.1",
-    "@typescript-eslint/eslint-plugin": "8.27.0",
-    "@typescript-eslint/parser": "8.27.0",
+    "@typescript-eslint/eslint-plugin": "8.28.0",
+    "@typescript-eslint/parser": "8.28.0",
     "eslint": "9.23.0",
     "eslint-config-prettier": "10.1.1",
-    "eslint-import-resolver-typescript": "^4.2.2",
+    "eslint-import-resolver-typescript": "4.2.4",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "5.2.4",
+    "eslint-plugin-prettier": "5.2.5",
     "eslint-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
@@ -95,7 +95,7 @@
     "rollup": "4.37.0",
     "sovendus-release-tool": "1.4.1",
     "typescript": "5.8.2",
-    "typescript-eslint": "8.27.0",
+    "typescript-eslint": "8.28.0",
     "vitest": "3.0.9"
   },
   "resolutions": {
