--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   ],
   "optionalDependencies": {
     "@tailwindcss/vite": "4.1.4",
-    "@vitejs/plugin-react": "4.4.0",
+    "@vitejs/plugin-react": "4.4.1",
     "autoprefixer": "10.4.21",
     "postcss": "8.5.3",
     "react": "19.1.0",
@@ -66,25 +66,25 @@
     "commander": "13.1.0",
     "vite-plugin-dts": "4.5.3",
     "fs-extra": "11.3.0",
-    "vite": "6.3.0"
+    "vite": "6.3.4"
   },
   "devDependencies": {
     "@types/archiver": "6.0.3",
     "@types/autoprefixer": "10.2.4",
     "@types/fs-extra": "11.0.4",
-    "@types/node": "22.14.1",
+    "@types/node": "22.15.3",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@types/eslint": "9.6.1",
-    "@typescript-eslint/eslint-plugin": "8.30.1",
-    "@typescript-eslint/parser": "8.30.1",
-    "eslint": "9.24.0",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
+    "eslint": "9.25.1",
     "eslint-config-prettier": "10.1.2",
-    "eslint-import-resolver-typescript": "4.3.2",
+    "eslint-import-resolver-typescript": "4.3.4",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "5.2.6",
-    "eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "eslint-plugin-react-compiler": "19.1.0-rc.1",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unused-imports": "4.1.4",
@@ -92,15 +92,15 @@
     "prettier-plugin-sort-json": "4.1.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rollup": "4.40.0",
-    "sovendus-release-tool": "1.4.6",
+    "rollup": "4.40.1",
+    "sovendus-release-tool": "1.5.1",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.30.1",
-    "vitest": "3.1.1"
+    "typescript-eslint": "8.31.1",
+    "vitest": "3.1.2"
   },
   "resolutions": {
-    "rollup": "4.40.0",
-    "typescript": "5.8.3",
+   
+    "typescript": "5.8.3", "rollup": "4.40.1",
     "@babel/helpers": "7.26.10"
   }
 }
