--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sovendus-builder",
   "description": "An all-in-one build/bundle tool based on vite and rollup. Build anything from vanilla js to typescript react.",
-  "version": "1.4.6",
+  "version": "1.5.0",
   "main": "dist/build.js",
   "types": "dist/config.d.ts",
   "license": "MIT",
@@ -99,8 +99,8 @@
     "vitest": "3.1.2"
   },
   "resolutions": {
-   
-    "typescript": "5.8.3", "rollup": "4.40.1",
+    "typescript": "5.8.3",
+    "rollup": "4.40.1",
     "@babel/helpers": "7.26.10"
   }
 }
